# c_base

./: .clang-format  .clangd  .gitignore
HW1/: A1.c
HW10/: CMakeLists.txt  README.md
HW10/gui/: CMakeLists.txt
HW10/src/: CMakeLists.txt  G1.c  G10.c  G11.c  G12.c  G13.c  G14.c  G15.c  G16.c  G17.c  G18.c  G19.c  G2.c  G20.c  G21.c  G22.c  G3.c  G4.c  G5.c  G6.c  G7.c  G8.c  G9.c  common.c
HW10/src/data_files/G1/: input.txt  output.txt
HW10/src/data_files/G10/: input.txt
HW10/src/data_files/G12/: output.txt
HW10/src/data_files/G13/: input.txt  output.txt
HW10/src/data_files/G14/: input.txt  output.txt
HW10/src/data_files/G15/: input.txt  output.txt
HW10/src/data_files/G16/: input.txt  output.txt
HW10/src/data_files/G17/: input.txt  output.txt
HW10/src/data_files/G18/: input.txt
HW10/src/data_files/G19/: input.txt  output.txt
HW10/src/data_files/G2/: output.txt
HW10/src/data_files/G20/: input.txt
HW10/src/data_files/G21/: input.txt  output.txt
HW10/src/data_files/G22/: output.txt
HW10/src/data_files/G3/: input.txt
HW10/src/data_files/G4/: input.txt
HW10/src/data_files/G5/: input.txt  output.txt
HW10/src/data_files/G8/: input.txt  output.txt
HW10/src/data_files/G9/: input.txt
HW10/tests/: CMakeLists.txt  TestAll.cpp
HW10/tests/test_tools/includes/: TestScanf.hpp  func_tools.hpp
HW11/: Makefile  README.md  main  temperature_big.csv:Zone.Identifier  temperature_small.csv
HW11/src/: csv_parse.c  main.c  temp_api.c
HW11/src/headers/: csv_parse.h  temp_api.h
HW12/: Makefile  README.md  main  temperature_small.csv
HW12/src/: main.c  parcer_csv.c  parser_csv.c  temp_api.c  validate.c
HW12/src/headers/: parcer_csv.h  parser_csv.h  temp_api.h  validate.h
HW2/: dec_hex_dec.py  truth_table  truth_table.c
HW3/: A12.c  A13.c  A3.c  A4.c  A5.c  Makefile
HW4/: A10.c  A11.c  A14.c  A15.c  A16.c  A17.c  A18.c  A19.c  A6.c  A7.c  A8.c  A9.c
HW4/tests/: Makefile  test_A8.cpp  test_all.cpp
HW5/: CMakeLists.txt  README.md
HW5/src/: B1.c  B10.c  B11.c  B12.c  B13.c  B14.c  B15.c  B16.c  B17.c  B18.c  B19.c  B2.c  B20.c  B21.c  B3.c  B4.c  B5.c  B6.c  B7.c  B8.c  B9.c  CMakeLists.txt
HW5/src/includes/: HW5.h
HW5/tests/: test_all.cpp
HW6/: CMakeLists.txt  README.md
HW6/src/: C1.c  C10.c  C11.c  C12.c  C13.c  C14.c  C15.c  C16.c  C17.c  C18.c  C19.c  C2.c  C20.c  C3.c  C4.c  C5.c  C6.c  C7.c  C8.c  C9.c  CMakeLists.txt
HW6/src/includes/: HW6.h
HW6/tests/: test_all.cpp
HW7/: CMakeLists.txt  README.md
HW7/src/: CMakeLists.txt  D1.c  D10.c  D11.c  D12.c  D13.c  D14.c  D15.c  D16.c  D17.c  D18.c  D19.c  D2.c  D20.c  D3.c  D4.c  D5.c  D6.c  D7.c  D8.c  D9.c
HW7/src/includes/: HW7.h
HW7/tests/: test_all.cpp
HW8/: CMakeLists.txt  README.md  test_scanf_113632515180322_3.txt
HW8/src/: CMakeLists.txt  E1.c  E10.c  E11.c  E12.c  E13.c  E14.c  E15.c  E16.c  E17.c  E18.c  E19.c  E2.c  E20.c  E3.c  E4.c  E5.c  E6.c  E7.c  E8.c  E9.c
HW8/src/includes/: HW8.h
HW8/tests/: CMakeLists.txt  TestAll.cpp
HW8/tests/test_tools/includes/: func_tools.hpp
HW9/: CMakeLists.txt  README.md
HW9/gui/: CMakeLists.txt  gF1.cpp  gF2.cpp  gF8.cpp
HW9/gui/includes/: gF1.hpp  gF2.hpp  gF8.hpp
HW9/src/: CMakeLists.txt  F1.c  F10.c  F11.c  F12.c  F13.c  F14.c  F15.c  F16.c  F17.c  F18.c  F19.c  F2.c  F20.c  F3.c  F4.c  F5.c  F6.c  F7.c  F8.c  F9.c  common.c
HW9/src/includes/: HW9.h
HW9/tests/: CMakeLists.txt  TestAll.cpp
HW9/tests/test_tools/: TestScanf.cpp
TESTS_HWs/: gentests.py
TESTS_HWs/test_test/: test_main.cpp
gentests/: README.md  gentests.py
home_work_3_1/: A0.c  A1.c  A2.c  Makefile
parserSCV/: CMakeLists.txt  temperature_small.csv
parserSCV/src/: main.c  parcer_csv.c
parserSCV/src/headers/: parcer_csv.h
test_c_prg/: Makefile  add_num.c  main.c  some_head.h
test_cpp_prg/: Makefile  kramer.cpp  kramer.hpp  main.cpp
